@@ -921,7 +921,7 @@
       <component name="glib" dir="glib" group="developer-libs">
         <podir dir="po"/>
         <potname name="glib20.pot"/>
-        <branch name="HEAD"/>
+        <branch name="glib-2-6"/>
         <regenerate/>
         <download/>
       </component>
@@ -1847,9 +1847,9 @@
         <download/>
       </component>
       <component name="gtk+-properties" dir="gtk+" group="developer-libs">
-	<podir dir="po-properties"/>
-	<potname name="gtk20.pot"/>
-	<branch name="gtk-2-4"/>
+        <podir dir="po-properties"/>
+        <potname name="gtk20.pot"/>
+        <branch name="gtk-2-4"/>
         <regenerate/>
       </component>
     </version>
@@ -1857,14 +1857,14 @@
       <component name="gtk+" dir="gtk+" group="developer-libs">
         <podir dir="po"/>
         <potname name="gtk20.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gtk-2-6"/>
         <regenerate/>
         <download/>
       </component>
       <component name="gtk+-properties" dir="gtk+" group="developer-libs">
-	<podir dir="po-properties"/>
-	<potname name="gtk20.pot"/>
-	<branch name="HEAD"/>
+        <podir dir="po-properties"/>
+        <potname name="gtk20.pot"/>
+        <branch name="gtk-2-6"/>
         <regenerate/>
       </component>
     </version>
