@@ -1,3 +1,7 @@
+2005-01-11  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: gtk+ and glib have been branched.
+
 2005-01-10  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnome-user-share to proposed.
